# cyril-release-please

./: .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml  random_fact.py  random_joke.py
.github/workflows/: lint.yml  lint_ruff.yaml  release-please.yml
